# haystack-rag

./: README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/agents/: _agent.py  agent.py  agent_tool_call.py  agent_tool_call_pipeline.py  test.txt  test_amazon.py
backend/components/: document_prepocessors.py  rag.py  web_search_component.py
backend/fake_db/: fake_db.py
backend/ingestion/: file_ingestion_pipeline.py  hybrid_ingestion_pipeline.py  ingestion_pipeline.py
backend/models/: hybrid_rag_run_model.py  user.py
backend/models/messages/: chat.py
backend/models/responses/: chat.py  ingestion.py
backend/models/roles/: chat_roles.py
backend/models/statuses/: process_status.py
backend/rag/: hybrid_rag_pipeline.py  rag_pipeline.py
backend/repository/: docker-compose.yml
backend/templates/: rag_template.jinja2
backend/utils/: auth.py  config.py  document_loader.py  files.py
backend/web_search/: web_search_pipeline.py
